# quasi_invariant-features

./: CMakeLists.txt  HSI_der.cc  HSI_der.h  README.md  RGB2Luminance.cc  colorHarris.cc  cst.cc  gder.cc  gder.h  getmaxpoints.cc  getmaxpoints.h  main.cc  main.h  mboost.cc  opponent_der.cc  spherical_der.cc  spherical_der.h  testouputs.txt
Include/: HSI_der.h  colorHarris.h  colourCanny.h  colourHarris.h  colourStructureTensor.h  main.h  mboost.h  operations.h  opponent_der.h
src/: HSI_der.cc  RGB2Luminance.cc  colorHarris.cc  colourCanny.cc  colourHarris.cc  colourStructureTensor.cc  cst.cc  gder.cc  getmaxpoints.cc  main.cc  mboost.cc  operations.cc  opponent_der.cc  spherical_der.cc
